fixed units spacing

--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,10 @@ li.icon {
   ul.weather-display {
     width: 275px;
   }
+  .weather-display li span.celsius,
+  .weather-display li span.farhenheit {
+    width: 50px;
+  }
   li.icon {
     left: 7px;
   }
